# extract

./: README.md  package-lock.json  package.json  tailwind.config.js
.github/workflows/: publish.yaml
src/: App.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/file_ext/: finder.rs  inspect.rs  mod.rs
src-tauri/src/unzip/: extutil.rs  mod.rs  plustree.rs
src/commands/: index.ts
src/components/: FileTree.tsx  PasswordDialog.tsx
