[package]
name = "extract"
version = "0.1.0"
description = "A Tauri App"
authors = ["itxve"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
thiserror = "2.0.12"
anyhow = "1.0.97"
tauri = { version = "2.3.1", features = ["devtools"] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-dialog = "2"

zip = "2.2.3"
# tar starts here
tar = "0.4.44"
#.tar.gz: 结合 flate2（GZIP）。
flate2 = "1.1.0"
#.tar.bz2: 结合 bzip2。
bzip2 = "0.5.2"
#.tar.xz: 结合 xz2。
xz2 = "0.1.7"
#7z 格式7.zip
sevenz-rust = {version="0.6.1",features= ["aes256"] }
#RAR 格式
unrar = "0.5.8"
tauri-plugin-deep-link = "2"
chrono = "0.4.40"
itertools = "0.14.0"

[profile.dev]
opt-level = 0           # No optimizations for development
debug = true           # Include debug symbols
debug-assertions = true # Enable debug assertions

[profile.release]
opt-level = 3          # Maximum optimizations for release
# debug = false         # No debug symbols
# debug-assertions = false # Disable debug assertions
lto = true            # Enable Link Time Optimization
# codegen-units = 1     # Maximize optimization potential
# panic = "abort"       # Minimal panic runtime
strip = true  
