[package]
name = "extract"
version = "0.1.0"
description = "A Tauri App"
authors = ["itxve"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"


[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
thiserror = "2.0.12"
anyhow = "1.0.97"
tauri = { version = "2.3.1", features = ["devtools"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-deep-link = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-cli = "2"

# TODO: cleanup features on objc2 crates
[target.'cfg(target_os = "macos")'.dependencies]
objc2-uniform-type-identifiers = { version = "0.3.0", features = [
  "UTCoreTypes",
  "UTType",
] }
objc2-app-kit = { version = "0.3.0", features = [
  "NSApplication",
  "NSResponder",
  "NSPasteboard",
] }
objc2-foundation = { version = "0.3.0", features = [
  "NSExtensionRequestHandling",
  "NSExtensionContext",
  "NSExtensionItem",
  "NSArray",
  "NSItemProvider",
  "NSDictionary",
  "NSError",
  "NSObject",
  "NSString",
  "block2",
  "NSThread",
  "NSRunLoop",
] }
objc2 = "0.6.0"


zip = "2.2.3"
# tar starts here
tar = "0.4.44"
#.tar.gz: 结合 flate2（GZIP）。
flate2 = "1.1.0"
#.tar.bz2: 结合 bzip2。
bzip2 = "0.5.2"
#.tar.xz: 结合 xz2。
xz2 = "0.1.7"
#7z 格式7.zip
sevenz-rust = {version="0.6.1",features= ["aes256"] }
#RAR 格式
unrar = "0.5.8"
chrono = "0.4.40"
itertools = "0.14.0"

[profile.dev]
opt-level = 0           # No optimizations for development
debug = true           # Include debug symbols
debug-assertions = true # Enable debug assertions

[profile.release]
opt-level = 3          # Maximum optimizations for release
# debug = false         # No debug symbols
# debug-assertions = false # Disable debug assertions
lto = true            # Enable Link Time Optimization
# codegen-units = 1     # Maximize optimization potential
# panic = "abort"       # Minimal panic runtime
strip = true  


